# urmom

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.deps  docker-compose.yaml  docker-entrypoint.sh  fly.toml
.github/workflows/: clients.yaml  deps.yaml  fly-deploy.yml  package.yaml
cmake/: Argon2.cmake  ClientGen.cmake  ProtoGen.cmake
cmd/: build.lisp  run.lisp  urmom-create_minimal_user.lisp  urmom-create_user.lisp  urmom-show_user.lisp  urmom-show_users.lisp  urmom-user_create.lisp
db/: schema.sql
db/fixtures/: sample-data.sql
db/migrations/: 20260617051743_01_init.sql
protos/: auth.proto
src/: urmom.cc
src/storage/: db.hpp
src/urmom/services/: auth-test.cc  auth.cpp  auth.hpp
src/urmom/services/auth/: authenticate.cpp  user_details.cpp
src/urmom/storage/: db.hpp
